[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pyatsa"
author = "Ryan Avery"
author-email = "ravery@ucsb.edu"
home-page = "https://github.com/agroimpacts/pyatsa"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires=[
    "numpy>=1.8",
    "scipy>=1.3.0",
    "scikit-image>=0.15",
    "statsmodels>=0.10.0",
    "scikit-learn>=0.21.2",
    "xarray>=0.12.3",
    "dask>=2.1.0",
    "rasterio>=1.0.7",
    "porder>=0.3.7",
]
requires-python=">=3.5"
description-file="README.md"
